# oyo

./: Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
crates/oyo-core/benches/: perf.rs
crates/oyo-core/src/: git.rs  multi.rs
crates/oyo/src/: config.rs  input.rs  keybindings.rs  main.rs  ui.rs
crates/oyo/src/app/: diff_worker.rs  file_panel.rs  files.rs  mod.rs  navigation.rs  palette.rs  review.rs  selection.rs  syntax.rs  tests.rs  types.rs  utils.rs
crates/oyo/src/views/: evolution.rs  split.rs  unified_pane.rs
docs/: DIFF_VIEWER.md  KEYBINDINGS.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
scripts/: sync-npm-version.cjs
